# paper-chase

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/: CHANGELOG.md  UV_SETUP.md
src/scripts/core/: generate_references_md.py  process_documents.py  verify_files_and_metadata.py
src/scripts/deprecated/: enrich_metadata.py  find_al_files.py  find_unknown_authors.py  generate_metadata_template.py  process_bad_metadata.py  update_al_files.py
src/scripts/detection/: detect_duplicates.py  detect_similar_pairs.py  find_broken_titles.py  find_unknown_authors_for_review.py
src/scripts/fixes/: add_file_hashes.py  fix_duplicate_authors.py  fix_mismatched_filenames.py
src/scripts/updates/: update_broken_titles.py  update_exact_duplicates.py  update_similar_pairs.py  update_unknown_authors.py
src/scripts/utilities/: extract_metadata.py  normalize_references_spacing.py  validate_references_json.py
tests/: test_utils.py
